2007-10-02  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #469657

	* mono-plugin.c:
	Use destroy functions in GHashTables to simplify memory management.

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-evolution-mono.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* mono-plugin.c: Drop unused inclusion of <dirent.h>.

2005-08-19  Not Zed  <NotZed@Ximian.com>

	** See #308117.

	* Makefile.am: link to proper libraries.

2005-06-15  Harish Krishnaswamy <kharish@novell.com>

	* Makefile.am : mono-plugin.h should be included
	in the sources too.
	
2005-05-25  Not Zed  <NotZed@Ximian.com>

	* mono-plugin.c: implement the mono loader as a plugin itself.

2005-05-17  Not Zed  <NotZed@Ximian.com>

	* Evolution.cs: added initial e_error wrapper.

	* Camel.cs: added multipart & contenttype wrappers.
	
